clear input field

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,11 @@
     </ul>
     <div class="add-members-container">
       <input
-        #peopleInput
+        #addMemberInput
         type="text"
-        (input)="onInput(peopleInput.value)"
         placeholder="Name"
+        (input)="onInput(addMemberInput.value)"
+        [value]="newMemberName"
       />
       <button (click)="addMember()">Add</button>
     </div>
