--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,5 +20,8 @@
         placeholder="# of teams"/>
       <button>Generate</button>
     </div>
+    <p *ngIf="errorMessage" class="error-msg">
+      {{errorMessage}}
+    </p>
   </div>
 </div>
