--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,13 @@
     </div>
     <div class="input-container">
       <input
-        type="text"
-        placeholder="# of teams"/>
-      <button>Generate</button>
+        #teamSizeInput
+        type="number"
+        placeholder="# of teams"
+        [value]="numberOfTeams"
+        (input)="onTeamSizeInput(teamSizeInput.value)"
+      />
+      <button (click)="generateTeams()">Generate</button>
     </div>
     <p *ngIf="errorMessage" class="error-msg">
       {{errorMessage}}
